<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/new_game_button"
        android:background="@color/colorGreen"
        android:onClick="new_game"
        android:text="@string/new_game"
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/score_field"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_below="@+id/new_game_button"
        android:hint="@string/score_tag"
        android:textColorHint="@color/colorBlack"
        android:textSize="20sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/player_score_field"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/score_field"
        android:textSize="20sp"
        android:layout_alignStart="@+id/new_game_button"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/dealer_score_field"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/score_field"
        android:textSize="20sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_toRightOf="@+id/player_score_field"
        android:layout_alignEnd="@+id/new_game_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/user_info_field"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/player_score_field"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/game_background"
        android:background="@color/colorLightGreen"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_below="@+id/user_info_field"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/dealer_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dealer_tag"
        android:layout_alignTop="@+id/game_background"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColorHint="@color/colorBlack"/>

    <TextView
        android:id="@+id/dealer_card_1"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_below="@+id/dealer_tag"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_alignStart="@id/game_background"
        android:hint="Dealer Card 1"
        android:textColorHint="@color/colorBlack"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/player_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/player_tag"
        android:layout_alignBottom="@+id/game_background"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColorHint="@color/colorBlack"/>

    <TextView
        android:id="@+id/player_card_1"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_above="@+id/player_tag"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"
        android:layout_alignStart="@id/game_background"
        android:hint="Player Card 1"
        android:textColorHint="@color/colorBlack"
        android:textSize="20sp" />

    <Button
        android:id="@+id/hit_button"
        android:layout_below="@+id/game_background"
        android:layout_alignStart="@+id/new_game_button"
        android:background="@color/colorYellow"
        android:onClick="hit"
        android:text="@string/hit"
        android:layout_height="50dp"
        android:layout_width="150dp" />

    <Button
        android:id="@+id/stop_button"
        android:layout_below="@+id/game_background"
        android:layout_toEndOf="@+id/hit_button"
        android:background="@color/colorRed"
        android:onClick="stop"
        android:text="@string/stop"
        android:layout_height="50dp"
        android:layout_width="150dp"/>


</RelativeLayout>